--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Lucas Diego",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
